feat: implement Sprint Z1 to Z8 - HashKey Trust Infrastructure Upgrade
